fix word-break in comments

--- a/eqdkp_bluesky.css
+++ b/eqdkp_bluesky.css
@@ -2433,7 +2433,7 @@ div.error { display: none; }
 	-moz-border-radius: 4px;
 	border-radius: 4px;
 	margin-left: 130px;
-	word-break: break-all;
+	word-break: break-word;
 }
 
 .comment_container:after, .comment_write_container:after {
